table spacing fixed sizes

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,7 @@ a.a-black {
 .blur {
 	background: rgba(255, 255, 255, 0.4);
 }
+
+tbody { 
+	height: 135px; overflow: auto;
+} 
